# ktme

./: .gitignore  .npmignore  Cargo.toml  LICENSE  MCP_INTEGRATION_GUIDE.md  MCP_SETUP_GUIDE.md  Makefile  PUBLISH_NOW.md  README.md  TESTING_GUIDE.md  analysis_report.md  demo_documentation_workflow.md  index.d.ts  index.js  install.js  npm-publish.md  npm-scripts.json  package.json  postinstall.js  preuninstall.js  release.sh  test_mcp_stdio.sh  test_mcp_tools.rs
.github/workflows/: auto-release.yml  release.yml
.kilo/: README.md
.kilo/skills/: README.md  SKILL.md
.kilo/skills/code-review/: SKILL.md
.kilo/skills/documentation/: SKILL.md
.kilo/skills/git-worktree/: SKILL.md
.kilo/skills/systematic-debugging/: SKILL.md
.kilo/skills/template/: SKILL.md
.kilo/skills/test-driven-development/: SKILL.md
.kilocode/: mcp.json
migrations/: 001_initial.sql  002_features_and_search.sql  003_search_index_unique.sql  004_cloud_sync_status.sql
src/: error.rs  lib.rs  main.rs  service_detector.rs
src/ai/: client.rs  mod.rs  prompts.rs  providers.rs  tests.rs
src/analysis/: coverage.rs  doc_parser.rs  mod.rs
src/cli/commands/: config.rs  extract.rs  generate.rs  init.rs  mapping.rs  mcp.rs  mod.rs  search.rs  (+2 more)
src/config/: mod.rs  types.rs
src/doc/: generator.rs  mod.rs  templates.rs
src/enhance/: link_enricher.rs  mod.rs  sync_engine.rs  todo_filler.rs
src/git/: diff.rs  mod.rs  reader.rs
src/knowledge/: engine.rs  mod.rs  scanner.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  stdio_server.rs  tools.rs
src/research/: mod.rs  reference_finder.rs  tech_detector.rs
src/skill/: action.rs  config.rs  mod.rs  trigger.rs
src/storage/: database.rs  discovery.rs  mapping.rs  mod.rs  models.rs  repository.rs
templates/: api-doc.md  architecture.md  changelog.md  technical-spec.md
tests/: integration_tests.rs  mcp_integration_tests.rs
(+11 files in other folders)
